--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
         content="eletronica, manuenção de computadores, conserto de tv, conserto de radio, conserto de apararelho de som">
     <meta name="author" content="Junior T.A.">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Montec Eletrônica</title>
+    <title> Overclock Pantanal </title>
 </head>
 
 <body>
     <nav>
-        <h1 class="logo">M.E.</h1>
+        <h1 class="logo">O.P.</h1>
         <a href="https://wa.me/5585991212512?text=Ol%C3%A1%2C%20vim%20pelo%20site!">Quem são eles?</a>
         <a href="https://wa.me/5585991212512?text=Ol%C3%A1%2C%20vim%20pelo%20site!">Saiba Mais</a>
     </nav>
     <!-- corpo -->
     <div class="corpo">
         <div class="titulo">
-            <h2>Montec Eletrônica</h2>
+            <h2>Overclock Pantanal</h2>
         </div>
         <div class="frase1">
             <h2>Faíscas acendem sonhos e circuitos constroem o futuro.</h2>
@@ -44,6 +44,7 @@
 
     </div>
 </body>
+
 
 
 </html>
