Update index.html numbers
Número atualizado

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <nav>
         <h1 class="logo">O.P.</h1>
-        <a href="https://wa.me/5585991212512?text=Ol%C3%A1%2C%20vim%20pelo%20site!">Quem são eles?</a>
-        <a href="https://wa.me/5585991212512?text=Ol%C3%A1%2C%20vim%20pelo%20site!">Saiba Mais</a>
+        <a href="https://wa.me/message/CNB37UKVGMLLA1">Quem são eles?</a>
+        <a href="https://wa.me/message/CNB37UKVGMLLA1 ">Saiba Mais</a>
     </nav>
     <!-- corpo -->
     <div class="corpo">
@@ -31,7 +31,7 @@
                     em Geral.</u>
             </p>
         </div>
-        <div class="click"><a href="https://wa.me/5585991212512?text=Ol%C3%A1%2C%20vim%20pelo%20site!"
+        <div class="click"><a href=" https://wa.me/message/CNB37UKVGMLLA1 "
                 target="_blank">Orçamento
                 Grátis</a></div>
         <!-- <div class="cards">
@@ -48,3 +48,4 @@
 
 
 </html>
+
